# Win32

./: .gitmodules  CMakeLists.txt
Example/: CMakeLists.txt  Example.cpp
Win32/: CMakeLists.txt
Win32/Include/Win32/: BitmapHelper.h  Clipboard.h  DragAndDrop.h  Event.h  FileDialog.h  FullScreenState.h  HighPrecisionTimer.h  ImageControl.h  ImageLIst.h  MainWindow.h  MonitorInfo.h  NotificationIconGroup.h  Timer.h  UserMessages.h  Win32Common.h  Win32Helper.h  Win32Window.h  WindowPosHelper.h
Win32/Source/: Clipboard.cpp  DragAndDrop.cpp  MainWindow.cpp  MonitorInfo.cpp  NotificationIconGroup.cpp  Win32Window.cpp
